# task_hub

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: development.yaml  test.yaml
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250527_094045_roles.rs  m20250527_094216_add_role_ref_to_users.rs  m20250601_172250_tasks.rs  m20250602_133444_accesses.rs  m20250605_151704_attachments.rs
src/: app.rs
src/common/: extractors.rs  mod.rs  responses.rs  settings.rs
src/controllers/: accesses.rs  attachments.rs  auth.rs  mod.rs  oauth2.rs  roles.rs  tasks.rs  users.rs
src/fixtures/: roles.yaml  users.yaml
src/initializers/: axum_session.rs  mod.rs  oauth2.rs
src/mailers/: auth.rs
src/mailers/auth/forgot/: html.t  text.t
src/mailers/auth/welcome/: html.t  text.t
src/models/: accesses.rs  attachments.rs  mod.rs  o_auth2_sessions.rs  roles.rs  tasks.rs  users.rs
src/models/_entities/: accesses.rs  attachments.rs  mod.rs  o_auth2_sessions.rs  prelude.rs  roles.rs  sea_orm_active_enums.rs  tasks.rs  users.rs
src/views/: access.rs  attachment.rs  auth.rs  mod.rs  role.rs  task.rs  user.rs
tests/models/: mod.rs  tasks.rs  users.rs
tests/requests/: attachments.rs  auth.rs  mod.rs  prepare_data.rs  roles.rs  tasks.rs  users.rs
