[workspace]
[package]
name = "task_hub"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "task_hub-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { git = "https://github.com/loco-rs/loco" }
loco-oauth2 = { path = "../loco-oauth2" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1", features = ["multipart"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }

sea-query-common-like = "1.1.0"
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

chrono = { version = "0.4" }
validator = { version = "0.20" }
time = "0.3.41"
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }

bytes = "1.10.1"
tower-cookies = "0.11.0"
dotenvy = "0.15.7"
loco-openapi = { git = "https://github.com/loco-rs/loco-openapi-Initializer", branch = "main", features = [
  "full",
] }
axum_typed_multipart = "0.16.2"
utoipa = { version = "5.3.1", features = ["chrono"] }

loco-oauth2 = { workspace = true }
axum_session = { version = "0.16.0" }

[[bin]]
name = "task_hub-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
